dropdown overlap fix

--- a/src/CommsyBundle/Resources/public/css/cs-theme/custom.less
+++ b/src/CommsyBundle/Resources/public/css/cs-theme/custom.less
@@ -131,10 +131,6 @@ div.cs-toggle-empty {
     margin-left: -5px;
 }
 
-.cs-remove-overflow{
-    overflow: visible !important;   
-}
-
 .cs-remove-padding{
     padding:0px !important;
 }
